<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TimePicker
        android:id="@+id/alarm_time_picker"
        android:layout_margin="3dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:timePickerMode="spinner"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ToggleButton
            android:id="@+id/alarm_toggle_button"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/alarm_off_toggle_text"
            android:text="@string/alarm_off_toggle_text"
            android:textOn="@string/alarm_on_toggle_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/select_alarm_sound_text"/>
        <Spinner
            android:layout_margin="3dp"
            android:background="#A9A9A9"
            android:textColor="#D3D3D3"
            android:spinnerMode="dropdown"
            android:id="@+id/alarm_sound_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
    </LinearLayout>
</LinearLayout>